# rusize

./: .gitattributes  Cargo.toml  Makefile  README.md  rusize_report.txt
.github/workflows/: release.yml
src/: chars.rs  cli.rs  display.rs  lib.rs  main.rs  scanner.rs  utils.rs
src/models/: dir_node.rs  mod.rs
src/services/: gui.html  gui.rs  mod.rs  report.rs  scanner.rs
